# fifi-calculator

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: error.rs  errorlist.rs  events.rs  lib.rs  main.rs  stack.rs  state.rs  util.rs
src-tauri/src/command/: accum.rs  algebra.rs  arguments.rs  base.rs  calculus.rs  datetime.rs  dispatch.rs  display.rs  flag_dispatch.rs  functional.rs  functor.rs  general.rs  graphics.rs  input.rs  mod.rs  modes.rs  nullary.rs  options.rs  shuffle.rs  statistics.rs  subcommand.rs  units.rs  variables.rs  vector.rs
src-tauri/src/display/: language.rs  mod.rs  renderer.rs
src-tauri/src/display/language/: basic.rs  graphics.rs  mod.rs  operator.rs
src-tauri/src/expr/: arithmetic.rs  atom.rs  basic_parser.rs  call.rs  incomplete.rs  interval.rs  literal.rs  mod.rs  number.rs  ordering.rs  predicates.rs  prisms.rs  tokenizer.rs  var.rs  vector.rs  walker.rs
src-tauri/src/expr/algebra/: factor.rs  formula.rs  mod.rs  newton.rs  polynomial.rs  term.rs
src-tauri/src/expr/calculus/: derivative.rs  mod.rs
src-tauri/src/expr/datetime/: duration.rs  mod.rs  parser.rs  prisms.rs  structure.rs  timezone.rs
src-tauri/src/expr/function/: builder.rs  distributive.rs  (+4 more)
src-tauri/src/graphics/: contour_plot.rs  dataset.rs  mod.rs  payload.rs  plot.rs  response.rs
src-tauri/src/mode/: calculation.rs  mod.rs
src-tauri/src/parsing/: basic_expr.rs  mod.rs  operator.rs  shunting_yard.rs  source.rs  token_stream.rs  tokenizer.rs
src-tauri/src/runner/: mobile.rs  mod.rs
src-tauri/src/stack/: base.rs  delegate.rs  error.rs  keepable.rs  mod.rs  shuffle.rs  structure.rs
src-tauri/src/state/: delegate.rs  events.rs  mod.rs  modeline.rs  query.rs  tauri_command.rs  undo.rs  validation.rs
src-tauri/src/undo/: change.rs  error.rs  mod.rs  stack.rs
src-tauri/src/units/: composite.rs  convertible.rs  dimension.rs  mod.rs  prefix.rs  simplifier.rs  tagged.rs  unit.rs  unit_with_power.rs
src-tauri/src/util/: angles.rs  brackets.rs  cow_dyn.rs  matrix.rs  mod.rs  point.rs  prism.rs  radix.rs  regexes.rs  stricteq.rs  write.rs
(+187 files in other folders)
