[package]
name = "fifi"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Regrettably, doctests are slowing the build down by an order of
# magnitude that is unacceptable (doctests are causing my local dev
# environment to run out of disk space, and I have 90GB free on the
# relevant partition before running tests).
doctest = false

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.60"
num = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.4"
approx = "0.5.1"
bitflags = "2.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
