[package]
name = "fifi"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Regrettably, doctests are slowing the build down by an order of
# magnitude that is unacceptable (doctests are causing my local dev
# environment to run out of disk space, and I have 90GB free on the
# relevant partition before running tests).
doctest = false
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.60"
num = { version = "0.4.3", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.10.4"
approx = "0.5.1"
bitflags = "2.5.0"
anyhow = "1.0.86"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-shell = "2.0.0-beta.7"
ciborium = "0.2.2"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
